# course_work_5_Gazimov_I

./: DBManager.py  README.md  confing.py  database.ini  main.py  pyproject.toml  utils.py
