[tool.poetry]
name = "course-work-5-gazimov-i"
version = "0.1.0"
description = ""
authors = ["Ildar-G <igazimov83@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_5_gazimov_i"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
